@@ -67,6 +67,7 @@ Stephen Dolan <stedolan>
 Junsong Li <lijunsong@mantis>
 Junsong Li <ljs.darkfish@gmail.com>
 Christophe Raffali <craff@mantis>
+Christophe Raffali <ChriChri@mantis>
 Anton Bachin <antron@mantis>
 Reed Wilson <omion>
 David Scott <djs55>
